Refactor of some code
