# acmesky/openapi/openapi.yaml
@@ -34,7 +34,6 @@ paths:
         Requires to start the buying process of the offer with the given offer code.
         API for: User
       operationId: buy_offer
-      parameters: []
       requestBody:
         content:
           application/json:
@@ -61,6 +60,15 @@ paths:
         Allows flight companies to notify ACMESky of the presence of new last minute offers.
         API for: Flight Company
       operationId: publish_last_minute_offer
+      parameters:
+      - description: Name of the flight company
+        explode: true
+        in: query
+        name: company_name
+        required: true
+        schema:
+          type: string
+        style: form
       requestBody:
         content:
           application/json:
@@ -250,12 +258,12 @@ components:
       type: object
     BuyOfferResponse:
       example:
-        pay_offer_url: pay_offer_url
+        communication_code: communication_code
       properties:
-        pay_offer_url:
+        communication_code:
           minLength: 1
           type: string
       required:
-      - pay_offer_url
+      - communication_code
       title: BuyOfferResponse
       type: object
